# pybugz

./: .gitattributes  .gitignore  ChangeLog  ChangeLog.old  MANIFEST.in  PKG-INFO  README  README.md  bugz.py  bugzrc.example  lbugz  pybugz-0.6.11.ebuild  pybugz.tmpl  pyproject.toml  setup.py  tabcheck.py  tox.ini
bugz/: __init__.py  argparser.py  argparsers.py  bugtracker.py  bugzilla.py  cli.py  cli_argparser.py  clparser.py  config.py  configfile.py  connection.py  definitions.py  errhandling.py  http.py  log.py  main.py  settings.py  tokens.py  utils.py
conf/: pybugz.conf
conf/conf.d/: gentoo.conf  redhat.conf
contrib/: bash-completion  zsh-completion
data/share/man/man1/: bugz.1
data/share/pybugz.d/: busybox.conf  default.conf  freebsd.conf  freedesktop.conf  gnome.conf  libav.conf  llvm.conf  mozilla.conf  redhat.conf
data/share/zsh/site-functions/: _pybugz
laxoptionparser/: __init__.py
man/: bugz.1  pybugz.d.5
pybugz/: cli.py  cli_argparser.py  configfile.py  exceptions.py  log.py  settings.py
pybugz.d/: busybox.conf  default.conf  freebsd.conf  freedesktop.conf  gentoo.conf  gnome.conf  kernel.conf  libav.conf  mozilla.conf  redhat.conf
resources/: bugzrc.sample
